--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "revelio",
   "version": "1.0.0",
   "main": "src/main/webapp/app.js",
+  "middlewareEntry": "./src/main/graphql-server/helpers/renderer.js",
   "license": "MIT",
   "devDependencies": {
     "@connexta/ace": "https://github.com/connexta/ace.git#53fd31d89bd5562d8ae187d078db7d7adea3a778",
@@ -13,14 +14,38 @@
     "eslint-plugin-react-hooks": "^2.1.2",
     "mocha": "^5.2.0",
     "node-fetch": "^2.6.0",
+    "nodemon": "^1.19.4",
+    "path": "^0.12.7",
     "rpc-websockets": "4.0.0",
     "tempfile": "^3.0.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
+    "@apollo/react-ssr": "^3.1.3",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
     "@date-io/date-fns": "^1.3.11",
-    "@material-ui/core": "^4.3.2",
+    "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.26",
     "@material-ui/pickers": "^3.2.5",
@@ -28,27 +53,47 @@
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
     "apollo-link-schema": "^1.2.4",
+    "axios": "^0.19.0",
+    "babel-loader": "^8.0.6",
     "date-fns": "^2.0.0-beta.5",
+    "express": "^4.17.1",
+    "file-loader": "^4.2.0",
     "geospatialdraw": "https://github.com/connexta/geospatialdraw.git#revelio",
     "golden-layout": "^1.5.9",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.5",
+    "handlebars-loader": "^1.7.1",
+    "html-webpack-plugin": "^3.2.0",
     "immutable": "^4.0.0-rc.12",
+    "less-loader": "^5.0.0",
+    "memory-fs": "^0.5.0",
     "moment": "^2.24.0",
-    "moment-timezone": "^0.5.16",
+    "moment-timezone": "^0.5.27",
+    "npm-run-all": "^4.1.5",
     "polished": "^3.4.1",
     "react": "^16.9.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.1.2",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-select": "3.0.4",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.3.2"
+    "require-from-string": "^2.0.2",
+    "styled-components": "^4.3.2",
+    "stylelint-custom-processor-loader": "^0.6.0",
+    "ts-loader": "^6.2.1",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-node-externals": "^1.7.2",
+    "worker-loader": "^2.0.0"
   },
   "scripts": {
+    "gql:server": "webpack --config server.config.js --watch",
+    "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
+    "dev:build-server": "webpack --config webpack.server.js --watch",
     "start": "ace start",
     "fmt": "ace format -w",
     "start:test": "ace start --env=test",
